Read button toggle on JS as well as fixed display overflow issue when adding a 3rd book

--- a/style.css
+++ b/style.css
@@ -40,7 +40,6 @@ body {
 .addBookContainer {
     display: flex;
     justify-content: center;
-    width: 100vw;
     margin-top: 8vh;
 }
 
@@ -108,8 +107,8 @@ body {
     position: absolute;
     top: 0;
     left: 0;
-    min-width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     background-color: rgba(0, 0, 0, 0.575);
     font-size: 1.4rem;
     display: none;
